Fix git configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8761:8761"
     environment:
-      - SPRING_PROFILES_ACTIVE=dev,swagger
+      - SPRING_PROFILES_ACTIVE=prod
       - SPRING_SECURITY_USER_NAME=$TWEETER_REGISTRY_USERNAME
       - SPRING_SECURITY_USER_PASSWORD=$TWEETER_REGISTRY_PASSWORD
       - JHIPSTER_SECURITY_AUTHENTICATION_JWT_BASE64_SECRET=$TWEETER_REGISTRY_JWT_TOKEN
